# brain-modelling-fmri

./: .gitignore  README.md  pyproject.toml
part_1/: dino_brain_rsa.ipynb  download_data.py
part_2/: download_data.py  helpers.py  predict_trial.py  subject_traits.ipynb
part_2/figs/: fig5_ez_ddm_parameters.csv  shared_axis_3d.html  subject_100307_profile.html  subject_100307_traits.html  subject_124422_traits.html  subject_151627_traits.html  subject_175439_traits.html  subject_197550_traits.html  subject_traits.csv
