[project]
name = "mm3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupytext>=1.19.3",
    "matplotlib>=3.11.0",
    "nilearn>=0.13.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "umap-learn>=0.5.12",
]
